--- a/THE-TRUTH-ABOUT-DRUGS/QUIZ1/quiz1.html
+++ b/THE-TRUTH-ABOUT-DRUGS/QUIZ1/quiz1.html
@@ -33,7 +33,7 @@
 				</section>
 				<form class="begin answer-wrapper">
 					<button type="button" class="start-quiz" style="font-family:Times New Roman">Start Quiz</button>
-					<button type="button" class="quit-quiz" style="font-family:Times New Roman">Quit</button>
+					<!--<button type="button" class="quit-quiz" style="font-family:Times New Roman">Quit</button>-->
 					<input type="submit" class="hide submit-btn submit-btn-portrait" value="Submit" disabled>
 				</form>
 
@@ -55,13 +55,13 @@
 			</section>
 			<section class="hide progress ">
 				<p class="progress-fill ">
-					Progress: <span class="progress-count">1 / 10</span><span class="progress-perc"></span>
+					Progress: <span class="progress-count">1 / 8</span><span class="progress-perc"></span>
 				</p>
 			</section>
 		</footer>
 		<div id="output">
 		</div>
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="js/script.js"></script>
+		<script type="text/javascript" src="js/script1.js"></script>
 	</body>
 </html>
